fix: do not force to set accept-encoding
